# streamweave

./: .cursorignore  .gitignore  .mcp.json  AGENTS.md  CI_CACHING_OPTIMIZATION.md  COMPARISON.md  CONTRIBUTING.md  Cargo.toml  Doxidize.toml  GITHUB_ACTIONS_FIX.md  GRAPH.md  LOOP.md  MIGRATION_PLAN.md  PROBLEMS.md  README.md  RELEASE_0.9.0.md  TASKS.md  TEST.md  TODO.md  TODO_DOXIDIZE.md  cargo-audit.toml  debug_parse.rs  deny.toml  devenv.nix  devenv.yaml  new.pine  opencode.json  opencode.jsonc  package-lock.json  package.json  process_errors.py  split_errors.py  test_path_parent_edge  zellij.kdl
.cursor/: README.md  ensure-direnv.sh  mcp.json  shell-init.sh
.cursor/commands/: activate.md  bd.md  create-example.md  debate.md  precommit.md  test-example.md
.cursor/plans/: graph-dsl-macro-implementation-f1c385ea.plan.md
.cursor/rules/: beads.mdc  direnv_setup.mdc  documentation_standards.mdc  drift.mdc  mcp-servers.mdc  mcp.mdc  mcp_servers.mdc  performance_guidelines.mdc  rust_coding_standards.mdc  streamweave_architecture.mdc  testing_strategy.mdc
.github/: dependabot.yml  release.yml
.github/workflows/: benchmarks.yml  ci.yml  publish.yml  rebase-branches.yml
.taskmaster/: config.json  state.json
.taskmaster/docs/: prd.txt
.taskmaster/tasks/: tasks.json
.taskmaster/templates/: README_TEMPLATE_GUIDE.md  RUSTDOC_README_INTEGRATION.md  package_readme_template.md
benches/: graph_pass_through_bench.rs  in_process_bench.rs  shared_memory_bench.rs
docs/: BRANCH_PROTECTION.md  BUNDLE_SIZE.md  DOCUMENTATION_COVERAGE.md  EXAMPLES-AND-HOW-TO.md  EXAMPLES-MERMAID-CANDIDATES.md  EXAMPLES-ROADMAP.md  IMPLEMENTATION-STATUS.md  KAFKA_SETUP.md  WASM_COMPATIBILITY.md  WASM_GUIDE.md  actor-supervision-trees.md  architecture.md  auto-scaling-clusters.md  cluster-sharding.md  cyclic-iterative-dataflows.md  deterministic-execution.md  distributed-checkpointing.md  event-time-processing.md  event-time-semantics.md  exactly-once-state.md  fbp-compatibility-matrix.md  flow-based-programming-platform.md  getting_started.md  graph-macro-migration-guide.md  graph-migration-guide.md  graph-node-refactoring-analysis.md  http-server-refactoring-plan.md  incremental-recomputation.md  logical-timestamps-timely-and-streamweave.md  mermaid-streamweave-implementation-plan.md  minimal-syntax-macro-implementation.md  missing-packages.md  monorepo-tasks.md  monorepo.md  production-cluster-tooling.md  progress-tracking.md  rustdoc-standards-analysis.md  scope-in-process-no-distributed-fault-tolerance.md  streamweave-gap-analysis-and-implementation-strategy.md  streamweave-mermaid-convention.md  (+4 more)
docs/guides/: common_use_cases.md
examples/: arithmetic_operations.rs  array_operations.rs  bounded_iteration.mmd  bounded_iteration.rs  checkpoint_restore.mmd  checkpoint_restore.rs  complex_composition.rs  deterministic_execution.mmd  deterministic_execution.rs  differential_stream.mmd  differential_stream.rs  event_time_watermark.mmd  event_time_watermark.rs  event_time_window.mmd  event_time_window.rs  exactly_once_state.mmd  exactly_once_state.rs  filter_node.rs  graph_macro_fan_patterns.mmd  graph_macro_fan_patterns.rs  graph_macro_io.mmd  graph_macro_io.rs  graph_macro_simple.mmd  graph_macro_simple.rs  map_node.rs  memoizing_node.mmd  memoizing_node.rs  production_ready.mmd  production_ready.rs  shard_config.mmd  shard_config.rs  string_operations.rs  subgraph_node.rs  supervision_restart.mmd  supervision_restart.rs
examples/01_basic_pipeline/: README.md  main.rs  pipeline.rs  tests.rs
examples/02_advanced_pipeline/: main.rs  pipeline.rs  tests.rs
examples/03_axum_middleware/: README.md  main.rs
examples/03_streaming_http/: README.md  main.rs
examples/04_http_router/: README.md  main.rs
examples/05_http_middleware/: Cargo.toml  README.md  main.rs
examples/_http-server/: main.rs
examples/advanced_pipeline/: README.md  pipeline.rs  tests.rs
examples/advanced_transformers/: main.rs  pipeline.rs
examples/basic_pipeline/: README.md  tests.rs
examples/database_integration/: README.md  main.rs  pipeline.rs
examples/error_handling/: README.md  main.rs  pipeline.rs
examples/exactly_once/: main.rs  pipeline.rs
examples/file_formats/: README.md  main.rs  pipeline.rs
examples/file_processing/: main.rs
examples/http-server/: main.rs
examples/http_graph_server/: README.md  handlers.rs  main.rs  server.rs
examples/http_poll_integration/: README.md  main.rs  pipeline.rs
examples/http_server_integration/: README.md  main.rs  pipeline.rs
examples/kafka_integration/: README.md  main.rs  pipeline.rs
examples/metrics_monitoring/: README.md  main.rs  pipeline.rs
examples/nodes/: average_node.rs  break_node.rs  concat_node.rs  condition_node.rs  (+24 more)
history/: beads-epics-and-tasks-from-gap-docs.md  docs-and-examples-plan.md  partial-implementation-bd-tasks.md  time-range-recomputation-bd-tasks.md
prompts/: 06_documentation_creation.md  07_deployment_strategy.md  08_project_management.md  09_task_implementation.md  10_task_input.md  architecture.md  fix_tests.md  performance.md  refactoring.md  security.md  test_coverage.md  test_fixing.md  testing.md
proptest-regressions/: consumer.txt
scripts/: build-wasm-size.sh  publish-order.sh  simplify_node_examples_mermaid.py  verify-docs.sh  workspace-info.sh
src/: adapters.rs  checkpoint.rs  cluster_health.rs  cluster_health_test.rs  consumer.rs  consumer_test.rs  db.rs  db_test.rs  distribution.rs  edge.rs  edge_test.rs  error.rs  error_test.rs  graph.rs  graph_builder.rs  graph_builder_test.rs  graph_macros.rs  graph_macros_test.rs  graph_test.rs  incremental.rs  incremental_test.rs  input.rs  input_test.rs  lib.rs  memory_pool.rs  message.rs  message_test.rs  metrics.rs  mod.rs  node.rs  node_test.rs  offset.rs  offset_test.rs  output.rs  output_test.rs  partitioning.rs  pipeline.rs  pipeline_test.rs  port.rs  port_test.rs  (+16 more)
test/: adapters.rs  consumer.rs  db.rs  error.rs  integration.rs  message.rs  output.rs  pipeline.rs  producer.rs  readme.rs  stateful_transformer.rs  transaction.rs
tests/: pipeline.rs  wasm_size_test.rs
(+2324 files in other folders)
