[package]
name = "streamweave"
version = "0.8.3"
edition = "2024"
authors = ["Tom Wieland <tom.wieland@gmail.com>"]
license = "CC-BY-SA-4.0"
repository = "https://github.com/Industrial/streamweave"
homepage = "https://github.com/Industrial/streamweave"
documentation = "https://docs.rs/streamweave"
keywords = ["stream", "async", "pipeline", "data-processing", "rust"]
categories = ["asynchronous", "data-structures"]
description = "Composable, async, stream-first computation in pure Rust"

[dependencies]
tokio = { version = "1.0", default-features = false, features = [
  "macros",
  "rt",
  "rt-multi-thread",
  "sync",
  "time",
  "io-util",
  "io-std",
  "signal",
  "fs",
  "net",
  "process",
] }
futures = "0.3"
async-trait = "0.1"
async-stream = "0.3.3"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1.40"
bytes = { version = "1.x", features = ["serde"] }
once_cell = "1.19"
thiserror = "2.0.17"
shared_memory = "0.12"
tokio-stream = { version = "0.1", default-features = false }
rand = "0.8"
csv = "1.3"
redis = { version = "1.0", features = ["tokio-comp", "connection-manager"] }
parquet = { version = "54", default-features = false, features = [
  "arrow",
  "snap",
] }
arrow = { version = "54", default-features = false }
rdkafka = "0.36"
sqlx = { version = "0.8", features = [
  "mysql",
  "postgres",
  "sqlite",
  "runtime-tokio-rustls",
] }
base64 = "0.22.1"
ort = "2.0.0-rc.10"
ndarray = "0.15"
opentelemetry = "0.31"
opentelemetry_sdk = "0.31"
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
http-body-util = "0.1"
uuid = { version = "1.10", features = ["v4", "serde"] }
serde_urlencoded = "0.7"
regex = "1.0"
reqwest = { version = "0.13", default-features = false, features = [
  "json",
  "multipart",
] }
quick-xml = { version = "0.38", features = ["serialize"] }
dyn-clone = "1.0"
[dev-dependencies]
proptest = "1.5"
tempfile = "3.10"
tokio-test = "0.4.2"
criterion = { version = "0.5", features = ["async_tokio"] }
tracing-subscriber = "0.3"

[[bench]]
name = "in_process_bench"
harness = false

[[bench]]
name = "shared_memory_bench"
harness = false

[[example]]
name = "map_node"
path = "examples/nodes/map_node.rs"

[[example]]
name = "filter_node"
path = "examples/nodes/filter_node.rs"

[[example]]
name = "for_each_node"
path = "examples/nodes/for_each_node.rs"

[[example]]
name = "join_node"
path = "examples/nodes/join_node.rs"

[[example]]
name = "condition_node"
path = "examples/nodes/condition_node.rs"

[[example]]
name = "error_branch_node"
path = "examples/nodes/error_branch_node.rs"

[[example]]
name = "match_node"
path = "examples/nodes/match_node.rs"

[[example]]
name = "range_node"
path = "examples/nodes/range_node.rs"

[[example]]
name = "read_variable_node"
path = "examples/nodes/read_variable_node.rs"

[[example]]
name = "write_variable_node"
path = "examples/nodes/write_variable_node.rs"

[[example]]
name = "while_loop_node"
path = "examples/nodes/while_loop_node.rs"

[[example]]
name = "break_node"
path = "examples/nodes/break_node.rs"

[[example]]
name = "continue_node"
path = "examples/nodes/continue_node.rs"

[[example]]
name = "sync_node"
path = "examples/nodes/sync_node.rs"

[[example]]
name = "repeat_node"
path = "examples/nodes/repeat_node.rs"

[[example]]
name = "retry_node"
path = "examples/nodes/retry_node.rs"

[[example]]
name = "switch_node"
path = "examples/nodes/switch_node.rs"

[[example]]
name = "try_catch_node"
path = "examples/nodes/try_catch_node.rs"

[[example]]
name = "average_node"
path = "examples/nodes/average_node.rs"

[[example]]
name = "count_node"
path = "examples/nodes/count_node.rs"

[[example]]
name = "max_aggregate_node"
path = "examples/nodes/max_aggregate_node.rs"

[[example]]
name = "min_aggregate_node"
path = "examples/nodes/min_aggregate_node.rs"

[[example]]
name = "add_node"
path = "examples/nodes/add_node.rs"

[[example]]
name = "divide_node"
path = "examples/nodes/divide_node.rs"

[[example]]
name = "modulo_node"
path = "examples/nodes/modulo_node.rs"

[[example]]
name = "multiply_node"
path = "examples/nodes/multiply_node.rs"

[[example]]
name = "power_node"
path = "examples/nodes/power_node.rs"

[[example]]
name = "subtract_node"
path = "examples/nodes/subtract_node.rs"

[[example]]
name = "concat_node"
path = "examples/nodes/concat_node.rs"

[[example]]
name = "contains_node"
path = "examples/nodes/contains_node.rs"

[[example]]
name = "flatten_node"
path = "examples/nodes/flatten_node.rs"

[[example]]
name = "index_node"
path = "examples/nodes/index_node.rs"

[[example]]
name = "index_of_node"
path = "examples/nodes/index_of_node.rs"

[lints.rust]
# Shared lint configuration
