[package]
name = "http_middleware_example"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "http_middleware_example"
path = "main.rs"

[dependencies]
streamweave = { path = "../../" }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
http = "1.0"
bytes = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"